@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui>
-<kpartgui name="kget" version="4">
+<kpartgui name="kget" version="5">
 <MenuBar>
     <Menu noMerge="1" name="file"><text>&amp;File</text>
         <Action name="new_transfer"/>
@@ -19,6 +19,7 @@
         <Separator/>
         <Action name="show_drop_target" />
         <Action name="auto_paste" />
+        <Action name="settings_showmenubar" append="show_merge" />
     </Menu>
     <Menu name="help"><text>&amp;Help</text>
     </Menu>
